[gd_scene load_steps=3 format=3 uid="uid://vlxp16yf6ots"]

[ext_resource type="Script" path="res://menus/game_options.gd" id="1_t5efr"]
[ext_resource type="FontFile" uid="uid://p5gc78np4wnw" path="res://assets/NK57 Monospace Ex Rg.otf" id="2_iml2u"]

[node name="GameOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5efr")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 30.0
offset_right = 533.0
offset_bottom = 390.0
scale = Vector2(0.75, 0.75)

[node name="Label1" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "master volume"

[node name="masterVolume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "sfx
"

[node name="sfxVolume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "music
"

[node name="musicVolume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label4" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "graphics"

[node name="Label5" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "display:
"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="fullscreenOption" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "fullscreen
"

[node name="windowedOption" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "windowed"

[node name="Label6" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "resolution:
"

[node name="resolutionOptions" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
selected = 0
item_count = 3
popup/item_0/text = "1920 x 1080 (16:9 full HD)"
popup/item_0/id = 1
popup/item_1/text = "1280 x 720 (16:9)"
popup/item_1/id = 2
popup/item_2/text = "800 x 600 (4:3)"
popup/item_2/id = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "V-sync:"

[node name="enableVSync" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "enabling V-sync will sync the rate of frame generation with your monitor's refresh rate"

[node name="exitToMenu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iml2u")
text = "exit to main menu
"

[connection signal="value_changed" from="Panel/VBoxContainer/masterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/sfxVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/musicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/fullscreenOption" to="." method="_on_fullscreen_option_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/windowedOption" to="." method="_on_windowed_option_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/resolutionOptions" to="." method="_on_resolution_options_item_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer2/enableVSync" to="." method="_on_enable_v_sync_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/exitToMenu" to="." method="_on_exit_to_menu_pressed"]
